intento de delete

--- a/Lab3ArqSoft-war/web/FilmList.xhtml
+++ b/Lab3ArqSoft-war/web/FilmList.xhtml
@@ -18,6 +18,8 @@
         <title>Lista Peliculas</title>
     </h:head>
     <h:body>
+        <a href="FilmList.xhtml">filmList</a>
+        <a href="LanguageList.xhtml">Language LIst</a>
         
         <f:view>
 
