--- a/Lab3ArqSoft-war/web/LanguageList.xhtml
+++ b/Lab3ArqSoft-war/web/LanguageList.xhtml
@@ -9,6 +9,8 @@
     </h:head>
     <h:body>
         Hello from Facelets
+        <a href="FilmList.xhtml">filmList</a>
+        <a href="LanguageList.xhtml">Language LIst</a>
         <f:view>
 
 
