intento de delete language. el error es que siempre manda 1

--- a/Lab3ArqSoft-war/web/LanguageDetails.xhtml
+++ b/Lab3ArqSoft-war/web/LanguageDetails.xhtml
@@ -26,6 +26,7 @@
                 
                 <h:commandButton id="back" value="Back" action="#{laguageMBean.list()}"/>
                 <h:commandButton id="update" value="Update" action="#{laguageMBean.update()}"/>
+                <h:commandButton id="delete" value="Delete" action="#{laguageMBean.delete()}"/>
             </h:form>
         </f:view>
 
