Funciona cambiando la base de dato con el script.  cambiamos Date por String en los pojos

--- a/Lab3ArqSoft-war/web/FilmList.xhtml
+++ b/Lab3ArqSoft-war/web/FilmList.xhtml
@@ -75,7 +75,7 @@
                             <h:outputText value="ReleaseYear"/>
                         </f:facet>
                         <h:outputText value="#{item.releaseYear}">
-                            <f:convertDateTime pattern="MM/dd/yyyy" />
+                            <!--<f:convertDateTime pattern="MM/dd/yyyy" />-->
                         </h:outputText>
                     </p:column>
                     
